; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_ApplyExtendedOpNodes.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_ApplyExtendedOpNodes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MultiCollect = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @ApplyExtendedOpNodes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ApplyExtendedOpNodes(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @ParentNode(i32* %10)
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @ChildNode(i32* %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = call i32* @ChildNode(i32* %14)
  store i32* %15, i32** %9, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* @MultiCollect, align 4
  %18 = call i32 @CitusIsA(i32* %16, i32 %17)
  %19 = call i32 @Assert(i32 %18)
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @UnaryOperator(i32* %20)
  %22 = call i32 @Assert(i32 %21)
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @SetChild(i32* %23, i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @SetChild(i32* %26, i32* %27)
  %29 = load i32*, i32** %8, align 8
  %30 = load i32*, i32** %6, align 8
  %31 = call i32 @SetChild(i32* %29, i32* %30)
  %32 = load i32*, i32** %6, align 8
  %33 = load i32*, i32** %9, align 8
  %34 = call i32 @SetChild(i32* %32, i32* %33)
  %35 = load i32*, i32** %4, align 8
  %36 = call i32 @pfree(i32* %35)
  ret void
}

declare dso_local i32* @ParentNode(i32*) #1

declare dso_local i32* @ChildNode(i32*) #1

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @CitusIsA(i32*, i32) #1

declare dso_local i32 @UnaryOperator(i32*) #1

declare dso_local i32 @SetChild(i32*, i32*) #1

declare dso_local i32 @pfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
